# HidingFolderSystem

./: CMakeLists.txt  HidingFolderSystem.c  vcpkg.json
Functions/: CryptF.c  DatabaseF.c  FolderF.c
Headers/: CryptF.h  DatabaseF.h  FolderF.h  shared.h
